--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">carrotmarket</string>
-    <string name="used_items">used_items</string>
+    <string name="app_name">마이마켓</string>
+    <string name="used_items">판매 상품</string>
     <string name="chat_room">채팅방</string>
     <string name="send">send</string>
-    <string name="add_item">add_item</string>
-    <string name="add_image">add_image</string>
-    <string name="title">title</string>
+    <string name="add_item">상품 등록</string>
+    <string name="add_image">이미지 등록</string>
+    <string name="title">이름</string>
 
 </resources>
